feat: :construction: Work in Reserves by user

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,10 @@ body{
     background-color: #04080f;
     
 }
+
+.limitar-ancho {
+    max-width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
